syntax = "proto3";
package rusk;
option go_package = "github.com/dusk-network/rusk-schema;rusk";

import "transaction.proto";

message TransferTransactionRequest {
    fixed64 value = 1;
    bytes recipient = 2; // Stealth Address
    fixed64 gas_limit = 3;
    fixed64 gas_price = 4;
}

service Transfer {
    // Generate a new Transfer transaction.
    rpc NewTransfer(TransferTransactionRequest) returns (Transaction) {}
}
